--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(hw1_wet)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(hw1_wet libary1.cpp libary1.h main.cpp)
+add_executable(hw1_wet main.cpp libary1.cpp libary1.h Queue.cpp Queue.h)
