--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,5 @@ project(hw1_wet)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(hw1_wet main.cpp Queue.h DC.h DC.cpp)
+add_executable(hw1_wet main.cpp Queue.h DC.h DC.cpp DCM.h DCM.cpp Node.h Node.cpp)
+
