--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
-cmake_minimum_required(VERSION 3.14)
+cmake_minimum_required(VERSION 3.10.2)
 project(hw1_wet)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(hw1_wet main.cpp Queue.h DC.h DC.cpp DCM.h DCM.cpp Node.h Node.cpp)
+add_executable(hw1_wet main.cpp Queue.h DC.h DC.cpp)
 
