--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,5 +3,8 @@ project(hw1_wet)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(hw1_wet main.cpp Queue.h DC.h DC.cpp Node.h Node.cpp DCM.cpp DCM.h)
+SET(GCC_COVERAGE_COMPILE_FLAGS "-g -std=c++11 -o DCM -Wall -pedantic-errors -Werror -Wreorder -DNDEBUG")
+
+
+add_executable(hw1_wet main.cpp Queue.h DC.h DC.cpp Node.h Node.cpp DCM.cpp DCM.h libary1.cpp libary1.h)
 
